tests/ui/consts/invalid_wide_ptr.stderr
error[E0277]: the size for values of type `[&'static str]` cannot be known at compilation time
  --> $DIR/invalid_wide_ptr.rs:1:17
   |
LL | pub struct Data([[&'static str]; 5_i32]);
   |                 ^^^^^^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `[&'static str]`
   = note: slice and array elements must have `Sized` type

error[E0308]: mismatched types
  --> $DIR/invalid_wide_ptr.rs:1:34
   |
LL | pub struct Data([[&'static str]; 5_i32]);
   |                                  ^^^^^ expected `usize`, found `i32`
   |
help: change the type of the numeric literal from `i32` to `usize`
   |
LL - pub struct Data([[&'static str]; 5_i32]);
LL + pub struct Data([[&'static str]; 5_usize]);
   |

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0277, E0308.
For more information about an error, try `rustc --explain E0277`.
